--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    <script src="js/modernizr.js"></script>
    <!-- Favicons
    ================================================== -->
-   <link rel="shortcut icon" href="C:\Users\ac\Desktop\shivam.jpg" >
+   <link rel="shortcut icon" href="E:\github\shivamohlan.github.io\images\shivam.jpg" >
 
    <script>
    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -35,7 +35,7 @@
   </script>
 </head>
 
-<body>
+<body background="images\sh.JPG">
   <!-- Preloader 
   <div id="preloader">
     <div class="loader"></div>    
@@ -92,7 +92,7 @@
        <li><a href="http://shivamohlan.me/photography/index.html" target="_blank"><i class="fa fa-picture-o"></i></a></li>
        <li><a href="https://www.facebook.com/shivam.gangster" target="_blank"><i class="fa fa-facebook"></i></a></li>
        <li><a href="https://twitter.com/shivamohlan" target="_blank"><i class="fa fa-twitter"></i></a></li>
-       <li><a href="https://github.com/SO27A" target="_blank"><i class="fa fa-github"></i></a></li>
+       <li><a href="https://github.com/shivamohlan" target="_blank"><i class="fa fa-github"></i></a></li>
        <li><a href="http://instagram.com/shivamohlan" target="_blank"><i class="fa fa-instagram"></i></a></li>
      </ul>
    </div>
@@ -107,7 +107,7 @@
      <div class="six columns bio-left"> 
        <div class="pp-container">
 
-        <br><br><br><img class="profile-pic wow zoomIn"  src="C:\Users\ac\Desktop\shivam.jpg" alt="" />
+        <br><br><br><img class="profile-pic wow zoomIn"  src="E:\github\shivamohlan.github.io\images\shivam.jpg" alt="" />
         <h2>Shivam Ohlan</h2>
         <h3>Commerce student<br>Proffesional Guitarist,Photographer and Great Spotrsperson</h3>              
       </div> <!-- Profile Picture -->
@@ -116,7 +116,7 @@
     <div class="six columns main-col wow fadeIn">
       <div class="arrow-left"></div>
 
-      <p>I am a Commerce student at Apeejay School,Faridabad <a href="http//www.apeejay.edu/faridabad/home.htm">Apeejay School,Faridabad</a>. I am in class 12th commerce student 
+      <p>I am a class 12th Commerce student at Apeejay School,Faridabad <a href="http//www.apeejay.edu/faridabad/home.htm">Apeejay School,Faridabad</a>.  
       </p>
 
       <div class="row">            
