--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    <script src="js/modernizr.js"></script>
    <!-- Favicons
    ================================================== -->
-   <link rel="shortcut icon" href="E:\github\shivamohlan.github.io\images\shivam.jpg" >
+   <link rel="shortcut icon" href="images\shivam.jpg" >
 
    <script>
    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -107,7 +107,7 @@
      <div class="six columns bio-left"> 
        <div class="pp-container">
 
-        <br><br><br><img class="profile-pic wow zoomIn"  src="E:\github\shivamohlan.github.io\images\shivam.jpg" alt="" />
+        <br><br><br><img class="profile-pic wow zoomIn"  src="images\shivam.jpg" alt="" />
         <h2>Shivam Ohlan</h2>
         <h3>Commerce student<br>Proffesional Guitarist,Photographer and Great Spotrsperson</h3>              
       </div> <!-- Profile Picture -->
