--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="row banner">
      <div class="banner-text">
       <h1 class="responsive-headline wow zoomIn">Hi! <br> <br> I'm <span>Shivam Ohlan</span></h1>
-      <h3 class="wow fadeInUp">Commerce student at <span><a href="http//www.apeejay.edu/faridabad/home.htm" target="_blank">Apeejay School, </a></span><span><a href="http//www.apeejay.edu/faridabad/home.htm" target="_blank">Faridabad</a></span> <br><br> Passionate about learning a new thing every day. <br> Find out more <a class="smoothscroll" href="#about">about me</a>.</h3>
+      <h3 class="wow fadeInUp">Commerce student at <span><a href="http://www.apeejay.edu/faridabad/index.php" target="_blank">Apeejay School, </a></span><span><a href="http//www.apeejay.edu/faridabad/home.htm" target="_blank">Faridabad</a></span> <br><br> Passionate about learning a new thing every day. <br> Find out more <a class="smoothscroll" href="#about">about me</a>.</h3>
       <hr />
     </div>
   </div>
@@ -116,7 +116,7 @@
     <div class="six columns main-col wow fadeIn">
       <div class="arrow-left"></div>
 
-      <p>I am a class 12th Commerce student at Apeejay School,Faridabad <a href="http//www.apeejay.edu/faridabad/home.htm">Apeejay School,Faridabad</a>.  
+      <p>I am a class 12th Commerce student at<a href="http://www.apeejay.edu/faridabad/index.php">Apeejay School,Faridabad</a>.  
       </p>
 
       <div class="row">            
